# Automated_Planning_Project

./: .gitignore  Dockerfile  README.md  dwr-domain.pddl  instance-10.pddl  questions
exercise_1/: domain.pddl  domain1.pddl  problem_0.pddl  problem_1.pddl  problem_2.pddl  problem_3.pddl  problem_corridor.pddl
exercise_1/planners_outputs/: dwn_pb1_output.txt  dwn_pb2_output.txt  dwn_pb3_output.txt  ff_pb1_output.txt  ff_pb2_output.txt  ff_pb3_output.txt  pb1_sas_plan  pb2_sas_plan  pb3_sas_plan  problem_1.pddl.plan  problem_2.pddl.plan  problem_3.pddl.plan  sco_pb1_output.txt  sco_pb1_sas_plan
exercise_2/: domain.pddl  domain2.pddl  problem_0.pddl  problem_1.pddl  problem_2.pddl  problem_3.pddl
exercise_2/planners_outputs/: dwn_pb1_output.txt  dwn_pb2_output.txt  dwn_pb3_output.txt  ff_pb1_output.txt  ff_pb2_output.txt  ff_pb3_output.txt  pb1_sas_plan  pb2_sas_plan  pb3_sas_plan  problem_1.pddl.plan  problem_2.pddl.plan  problem_3.pddl.plan
exercise_3/: domain3.hddl  domain3_recursive.hddl  pand_pb2_4t_output.txt  problem_0.hddl  problem_1.hddl  problem_1_4t.pddl  problem_1_5t.pddl  problem_2.hddl  problem_2_4t.pddl  problem_2_5t.pddl  problem_3.hddl  problem_3_4t.pddl  problem_4.hddl  test_domain.hddl  test_problem.hddl
exercise_4/: capitalize_sol.py  domain4.pddl  pddlplan  pddlplan.1  problem_1.pddl  problem_2.pddl  problem_3.pddl
exercise_5/: README.md
exercise_5/src/planner/: CMakeLists.txt
exercise_5/src/planner/launch/: planner_launch.launch.py
exercise_5/src/planner/pddl/: problem_0  problem_1  problem_2  problem_3  test
exercise_5/src/planner/src/: load_carrier_node.cpp  load_supply_node.cpp  unload_bolt_node.cpp  unload_carrier_node.cpp  unload_tool_node.cpp  unload_valve_node.cpp
problem1/: domain.pddl  problem_1.pddl  problem_1.pddl.plan  problem_2.pddl  problem_3.pddl  sas_plan
ros_ws/src/planner/: package.xml
(+27 files in other folders)
